# PSI

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  build.bat
src/: dpi_live.cpp  main_working.cpp
web-dashboard/: package-lock.json  package.json
web-dashboard/src/app/: globals.css  page.tsx
web-dashboard/src/components/ui/: AppDistributionChart.tsx  StatCard.tsx
web-dashboard/src/lib/: utils.ts
